--- a/index.css
+++ b/index.css
@@ -36,5 +36,5 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
   text-align: center;
-  background-color: #ffd11a;
+  background-color: #cc99ff;
 }
